<resources>
    <string name="app_name">SweetContactGet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Splash String -->
    <string name="splash_team_name">by 대한민국 개발에 일조하다 </string>
    <string name="splash_member_name">이강진 | 김윤재 | 김태영 | 김현지 | 이지민</string>


    <!-- Common String -->
    <string name="common_phone_number">전화번호</string>
    <string name="common_phone_number2">전화번호2</string>
    <string name="common_phone_number3">전화번호3</string>
    <string name="common_phone_number_content">전화번호 정보가 없습니다.</string>
    <string name="common_cancel">취소</string>
    <string name="common_save">저장</string>
    <string name="common_name">이름</string>
    <string name="common_event_information">이벤트 정보</string>
    <string name="common_likeability">호감도</string>
    <string name="common_relationship">관계</string>
    <string name="common_group">그룹</string>
    <string name="common_memo">메모</string>
    <string-array name="group_array">
        <item>없음</item>
        <item>가족</item>
        <item>회사</item>
        <item>직장</item>
        <item>친구</item>
    </string-array>

    <!-- MainActivity -->
    <string name="main_bottom_bar_random_call">랜덤으로 전화걸기</string>
    <string name="main_bottom_bar_contacts_text">연락처</string>
    <string name="main_bottom_bar_my_profile_text">내 프로필</string>

    <!-- AddContactActivity -->
    <string name="add_contact_add_phone_number">+&#160;&#160;&#160;&#160;전화번호 추가</string>
    <string name="add_contact_delete_phone_number">-&#160;&#160;&#160;&#160;전화번호 제거</string>
    <string name="add_contact_empty_name">이름을 입력해주세요</string>
    <string name="add_contact_empty_phone_number">전화번호를 입력해주세요</string>
    <string name="add_contact_empty_phone_number2">전화번호2(을)를 입력해주세요</string>
    <string name="add_contact_empty_phone_number3">전화번호3(을)를 입력해주세요</string>
    <string name="add_contact_empty_event_information">이벤트 정보를 입력해주세요</string>
    <string name="add_contact_empty_memo">메모를 입력해주세요</string>
    <string name="add_contact_empty_data">입력하지 않은 정보가 있습니다</string>
    <string name="add_contact_wrong_data">유효하지 않은 정보가 있습니다</string>
    <string name="add_contact_main_phone_number">대표</string>
    <string name="add_contact_placeholder_name">이름 입력</string>
    <string name="add_contact_placeholder_phone_number">전화번호 입력</string>
    <string name="add_contact_placeholder_event_information">이벤트 정보 입력</string>
    <string name="add_contact_placeholder_relationship">관계 입력</string>
    <string name="add_contact_placeholder_memo">메모 입력</string>
    <string name="add_contact_placeholder_wrong_name">특수문자는 이름에 넣을 수 없습니다</string>
    <string name="add_contact_placeholder_wrong_phone_number">올바른 전화번호 형식이 아닙니다. 예 : 010-1234-5678</string>
    <string name="add_contact_placeholder_wrong_event_information">이벤트 정보는 2글자 이상 10글자 이하</string>
    <string name="add_contact_placeholder_wrong_relationship">관계는 친구, 가족, 학교, 직장 넷 중 하나</string>
    <string name="add_contact_placeholder_wrong_memo">메모는 2글자 이상 8글자 이하</string>

    <!-- Contact Fragment -->
    <string-array name="contact_tab">
        <item>전체 연락처</item>
        <item>즐겨찾기</item>
    </string-array>
    <string name="contact_add_button">연락처 추가</string>
    <string name="contact_search">검색창</string>

    <!-- AllContact Fragment -->
    <string name="swipe_call">전화 걸기 > > </string>
    <string name="person_info_holder_name">스위티 이름</string>
    <string name="person_info_holder_heart_percent">호감도</string>


    <!-- Bookmark Fragment -->


    <!-- Detail Fragment -->
    <string name="detail_message">메세지</string>
    <string name="detail_call">전화</string>
    <string name="detail_event">최근 설정한 이벤트</string>
    <string name="detail_event_content">이벤트 정보가 없습니다.</string>
    <string name="detail_heart">호감도</string>
    <string name="detail_relationship">관계</string>
    <string name="detail_relationship_content">관계 정보가 없습니다.</string>
    <string name="detail_memo">메모</string>
    <string name="detail_memo_content">저장된 메모가 없습니다.</string>
    <string name="detail_add_phone_number">+&#160;&#160;&#160;&#160;전화번호 추가</string>

    <!-- Random Fragment -->
    <string-array name="random_tab">
        <item>랜덤 전화 걸기</item>
        <item>최근 랜덤 전화</item>
    </string-array>

    <!-- RandomCall Fragment -->


    <!-- RecentRandomCall Fragment -->


    <!-- MyPage Fragment -->
    <string name="mypage_birthday">생일</string>
    <string name="mypage_birthday_content">생일 정보가 없습니다.</string>
    <string name="mypage_address">주소</string>
    <string name="mypage_address_content">주소 정보가 없습니다.</string>
    <string name="mypage_introduce">소개 매세지</string>
    <string name="mypage_introduce_content">소개 정보가 없습니다.</string>

    <!-- Dialog -->
    <string name="dialog_change_theme">색상 테마를 변경하시겠습니까?</string>
    <string name="dialog_edit_name">이름 편집</string>
    <string name="dialog_make_a_call">>&#160;&#160;&#160;전화 걸기</string>
    <string name="dialog_make_a_call_cancel">>&#160;&#160;&#160;전화 걸지 않기</string>
    <string name="dialog_wrong_message_name">이름에는 특수문자를 입력할 수 없습니다</string>
    <string name="dialog_wrong_message_number">숫자만 입력 가능 합니다</string>
    <string name="title_activity_crop_image">CropImageActivity</string>

    <!-- Notification String -->
    <string name="notification_1"> %s! 나와의 약속을 잊은건 아니지?</string>
    <string name="notification_2"> %s! 나한테 전화할 시간 이야!!!</string>
    <string name="notification_3"> %s!모닝콜 해주는 거 잊지 않았지?</string>
    <string name="notification_4">야! 지금 나한테 빨리 전화해</string>
    <string name="notification_5">혹시..뭐 잊은거 없어..?</string>
    <string name="notification_6">%s.. 보고 싶어</string>

    <string name="clear_notification_1">%s.. 나 이제 니가 좋아진거같애..</string>
    <string name="clear_notification_2">%s! 우리 오늘 부터 1일 인거야!</string>
    <string name="clear_notification_3">%s 우리 무슨 사이야..?</string>
    <string name="clear_notification_4">%s. 오늘 너를 갖고 말거야</string>
    <string name="clear_notification_5">%s.. 사실 나 오랫동안 너를..</string>
    <string name="clear_notification_6">혹시 무슨 요일이 가장 좋아? 네가 가장 좋아하는 요일에 우리 사귀면 좋겠어</string>
    <string name="notification">알림입니다.</string>
    <string name="notificate">알림</string>
    <string name="invalid_input">유효하지 않은 입력 입니다. 다시 확인해 주세요</string>
    <string name="name">name</string>
    <string name="number">number</string>
    <string name="alltext">allText</string>
</resources>