<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_dialog_1">

    <TextView
        android:id="@+id/tv_edit_name"
        android:text="@string/dialog_edit_name"
        android:textColor="@color/white"
        android:fontFamily="@font/yeonaesidae_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_edit_name"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:hint="@string/common_phone_number"
        android:textSize="15sp"
        android:fontFamily="@font/yeonaesidae_r"
        android:background="@drawable/shape_corner_radius_15dp_bg_tertiary"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_edit_wrong_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact_placeholder_wrong_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/yeonaesidae_r"
        android:visibility="invisible"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/et_edit_name"
        app:layout_constraintStart_toStartOf="@id/et_edit_name"/>



    <android.widget.Button
        android:id="@+id/btn_edit_cancel"
        android:text="@string/common_cancel"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/yeonaesidae_b"
        android:layout_width="90sp"
        android:layout_height="33sp"
        android:layout_marginStart="40sp"
        android:layout_marginBottom="15sp"
        android:paddingTop="5sp"
        android:background="@drawable/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.widget.Button
        android:id="@+id/btn_edit_save"
        android:text="@string/common_save"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/yeonaesidae_b"
        android:layout_width="90sp"
        android:layout_height="33sp"
        android:layout_marginBottom="15sp"
        android:layout_marginEnd="40sp"
        android:paddingTop="5sp"
        android:background="@drawable/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>