<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="120sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_dialog_1">

    <TextView
        android:id="@+id/tv_theme_change_text"
        android:text="@string/dialog_change_theme"
        android:textColor="@color/white"
        android:fontFamily="@font/yeonaesidae_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.widget.Button
        android:id="@+id/btn_theme_change_cancel"
        android:text="@string/common_cancel"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/yeonaesidae_b"
        android:layout_width="90sp"
        android:layout_height="33sp"
        android:layout_marginStart="30sp"
        android:layout_marginBottom="15sp"
        android:paddingTop="5sp"
        android:background="@drawable/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.widget.Button
        android:id="@+id/btn_theme_change_save"
        android:text="@string/common_save"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/yeonaesidae_b"
        android:layout_width="90sp"
        android:layout_height="33sp"
        android:layout_marginBottom="15sp"
        android:layout_marginEnd="30sp"
        android:paddingTop="5sp"
        android:background="@drawable/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>