<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_light"
    android:paddingHorizontal="32dp"
    android:paddingTop="32dp"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_detail_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primary" />

        <ImageView
            android:id="@+id/iv_detail_delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primary" />

        <ToggleButton
            android:id="@+id/tb_detail_mark"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_bookmark_selector"
            android:textOff=""
            android:textOn=""
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_detail_delete"
            app:layout_constraintEnd_toStartOf="@id/iv_detail_delete"
            app:layout_constraintTop_toTopOf="@id/iv_detail_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_top_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/iv_detail_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background_profile_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="W,1:1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/yeonaesidae"
                android:gravity="center"
                android:letterSpacing="0.3"
                android:text="@string/common_name"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="50sp"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_profile"
                tools:layout_editor_absoluteX="33dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_detail_contact_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_name">

                <TextView
                    android:id="@+id/tv_detail_message"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@drawable/btn"
                    android:fontFamily="@font/yeonaesidae"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/detail_message"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.47" />

                <TextView
                    android:id="@+id/tv_detail_call"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="@drawable/btn"
                    android:fontFamily="@font/yeonaesidae"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/detail_call"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.47" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_detail_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_info"
                android:orientation="vertical"
                android:padding="16dp"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_contact_button">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/common_phone_number"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_detail_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/common_phone_number_content"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_detail_number_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_info"
                android:orientation="vertical"
                android:padding="16dp"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_number">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/common_phone_number"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_detail_number_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/common_phone_number_content"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_detail_number_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_info"
                android:orientation="vertical"
                android:padding="16dp"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_number_2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/common_phone_number"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_detail_number_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/common_phone_number_content"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_detail_add_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_add_phone_number"
                android:textSize="12sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/yeonaesidae_b"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/ll_detail_number_3"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_number_3"/>

            <LinearLayout
                android:id="@+id/ll_detail_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_info"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_add_number">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/detail_event"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_detail_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/detail_event_content"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_detail_heart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_info"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_event">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/detail_heart"
                    android:textColor="@color/black" />

                <RatingBar
                    android:id="@+id/rb_heart_rating"
                    style="@style/HeartRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_detail_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@drawable/background_info"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_heart">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/detail_relationship"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/detail_group_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:spinnerMode="dropdown"
                    android:layout_marginBottom="5dp"
                    android:theme="@style/SpinnerTheme"
                    app:layout_constraintStart_toStartOf="@+id/tv_add_contact_relationship"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_contact_relationship" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_detail_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@drawable/background_info"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_relationship">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/detail_memo"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_detail_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/yeonaesidae"
                    android:text="@string/detail_memo_content"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="24sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@id/ll_detail_memo"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>